@@ -1,3 +1,8 @@
+2009-02-02  Badlop  <badlop@process-one.net>
+
+	* src/mod_statsdx.erl: New stats for erlang memory. Show new stats
+	in node page. Show big integers with separation for easy reading.
+
 2008-09-16  Badlop  <badlop@process-one.net>
 
 	* src/mod_statsdx.erl: Fixed code indentation and
